Day 02: Add missing README + final polish

--- a/Day-02-Portfolio/index.html
+++ b/Day-02-Portfolio/index.html
@@ -76,7 +76,7 @@
 
   <!-- Contact -->
   <footer class="py-16 text-center bg-gray-900">
-    <p class="text-xl">Currently grinding 90 days to placement 💪</p>
+    <p class="text-xl">Currently grinding 90 days to placement</p>
     <p class="mt-4">Open to SDE internships & full-time roles</p>
     <p class="mt-8 text-3xl">Let's connect → mshamim.cs@gmail.com</p>
   </footer>
