--- a/Day-02-Portfolio/index.html
+++ b/Day-02-Portfolio/index.html
@@ -33,44 +33,120 @@
   <section id="projects" class="py-20 px-6 bg-gray-800">
     <h2 class="text-4xl md:text-6xl font-bold text-center mb-16">Projects (Building Live)</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto">
-      <!-- Project Card Template – You will replace these daily -->
-      <div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:transform hover:scale-105 transition">
-        <div class="h-48 bg-gradient-to-r from-purple-600 to-blue-600"></div>
-        <div class="p-6">
-          <h3 class="text-2xl font-bold mb-2">Day 02 – Personal Portfolio</h3>
-          <p class="text-gray-400 mb-4">Fully responsive portfolio with Tailwind CSS</p>
-          <div class="flex gap-4">
-            <a href="#" class="text-purple-400 hover:underline">Live →</a>
-            <a href="https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-02-Portfolio" class="text-gray-400 hover:underline">Code →</a>
-          </div>
-        </div>
-      </div>
-      <!-- Add more cards as you complete projects -->
+  <!--PORTFOLIO Project Card -->
+      <div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top Gradient -->
+  <div class="h-48 bg-gradient-to-r from-purple-600 to-blue-600 relative overflow-hidden">
+    <div class="absolute inset-0 bg-black/20"></div>
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-80">PORTFOLIO</div>
+  </div>
+
+  <div class="p-6 flex flex-col flex-grow justify-between">
+    <div class="space-y-10">
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 02 – Personal Portfolio
+      </h3>
+      <p class="text-gray-300 text-sm leading-relaxed">
+        This very portfolio • Fully responsive • Dark theme • Tailwind CSS • Live project showcase with perfect alignment
+      </p>
+    </div>
+
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="https://shamim-portfolio.vercel.app" target="_blank"
+        class="text-green-400 font-bold hover:text-green-300 flex items-center gap-4 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href="https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-02-Portfolio" target="_blank"
+        class="text-gray-400 hover:text-white flex items-center gap-2 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+<!--NETFLIX Project Card -->    
+<div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top Image -->
+  <div class="h-48 relative overflow-hidden bg-black">
+    <!-- Netflix Top -->
+    <div class="absolute inset-0 bg-gradient-to-r from-red-600 via-red-700 to-black"></div>
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-80">NETFLIX</div>
+  </div>
+
+  <!-- Content Area -->
+  <div class="p-6 flex flex-col flex-grow justify-between">
+    <div class="space-y-10">
+      <!-- Title with fixed height + ellipsis if too long -->
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 03 – Netflix Clone
+      </h3>
+      <!-- Description -->
+      <p class="text-gray-300 text-sm leading-relaxed">
+        Pixel-perfect Netflix 2025 homepage • Auto-sliding carousel with movie titles • Local assets • Fully responsive • Dark hero with gradient overlay
+      </p>
+    </div>
+
+    <!-- Links – ALWAYS perfectly aligned at bottom -->
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="https://shamim-netflix-clone.vercel.app" target="_blank" 
+         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-2 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href="https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-03-Netflix-Clone" target="_blank"
+         class="text-gray-400 hover:text-white flex items-center gap-4 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+ <!--TESLA Project Card -->
+<div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top with Tesla Logo -->
+  <div class="h-48 bg-black relative overflow-hidden">
+    <div class="absolute inset-0 bg-gradient-to-r from-red-600/30 to-transparent"></div>
+    <img src="https://shamim-tesla-clone.vercel.app/assets/Teslalogo.svg" 
+         alt="Tesla" class="absolute top-5 right-6 h-14 opacity-90">
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-85">TESLA</div>
+
+  </div>
+
+  <div class="p-6 flex flex-col justify-between">
+    <div class="space-y-10">
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 04 – Tesla 2025 Official Clone
+      </h3>
+      <p class="text-gray-300 text-sm leading-relaxed">
+        Pixel-perfect Tesla.com 2025 • Dark/Light mode toggle • Navbar blur on scroll • AOS animations • Cybertruck + Robotaxi showcase • 100% local assets
+      </p>
+    </div>
+
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="https://shamim-tesla-clone.vercel.app" target="_blank"
+         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-2 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href="https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-04-Tesla-Clone" target="_blank"
+         class="text-gray-400 hover:text-white flex items-center gap-4 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+       <!-- Add more cards as I complete projects -->
       <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
         <p class="text-6xl mb-4">🚧</p>
         <p class="text-xl">Project coming soon...</p>
       </div>
-       <!-- Add more cards as you complete projects -->
+       <!-- Add more cards as I complete projects -->
       <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
         <p class="text-6xl mb-4">🚧</p>
         <p class="text-xl">Project coming soon...</p>
       </div>
-       <!-- Add more cards as you complete projects -->
+       <!-- Add more cards as I complete projects -->
       <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
         <p class="text-6xl mb-4">🚧</p>
         <p class="text-xl">Project coming soon...</p>
       </div>
-       <!-- Add more cards as you complete projects -->
-      <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
-        <p class="text-6xl mb-4">🚧</p>
-        <p class="text-xl">Project coming soon...</p>
-      </div>
-       <!-- Add more cards as you complete projects -->
-      <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
-        <p class="text-6xl mb-4">🚧</p>
-        <p class="text-xl">Project coming soon...</p>
-      </div>
-      <!-- Repeat the "coming soon" card 4 more times -->
+      <!-- Repeat the "coming soon" card as much as times i need -->
     </div>
   </section>
 
