Day 08: Asionix Portfolio

--- a/Day-02-Portfolio/index.html
+++ b/Day-02-Portfolio/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
-      <a href="https://shamim-portfolio.vercel.app" target="_blank"
+      <a href="https://shamim-portfolio-seven.vercel.app/" target="_blank"
         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-4 transition">
         Live Demo <span class="text-xl">→</span>
       </a>
@@ -131,6 +131,102 @@
     </div>
   </div>
 </div>
+
+<!--Spotify Project Card -->
+<div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top with Tesla Logo -->
+  <div class="h-48 bg-black relative overflow-hidden">
+    <div class="absolute inset-0 bg-gradient-to-r from-red-600/30 to-transparent"></div>
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-85">Spotify</div>
+  </div>
+
+  <div class="p-6 flex flex-col justify-between">
+    <div class="space-y-10">
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 05 – Spotify Clone
+      </h3>
+      <p class="text-gray-300 text-sm leading-relaxed">
+        Pixel-perfect Tesla.com 2025 • Dark/Light mode toggle • Navbar blur on scroll • AOS animations • Cybertruck + Robotaxi showcase • 100% local assets
+      </p>
+    </div>
+
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="spotify-clone-blue-eta.vercel.app" target="_blank"
+         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-2 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href=https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-05-Spotify-Clone" target="_blank"
+         class="text-gray-400 hover:text-white flex items-center gap-4 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+
+<!--Whatsapp Clone Project Card -->
+<!--Spotify Project Card -->
+<div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top with Tesla Logo -->
+  <div class="h-48 bg-black relative overflow-hidden">
+    <div class="absolute inset-0 bg-gradient-to-r from-red-600/30 to-transparent"></div>
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-85">Whatsapp</div>
+  </div>
+
+  <div class="p-6 flex flex-col justify-between">
+    <div class="space-y-10">
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 06 – WhatsApp Clone
+      </h3>
+      <p class="text-gray-300 text-sm leading-relaxed">
+        Pixel-perfect Tesla.com 2025 • Dark/Light mode toggle • Navbar blur on scroll • AOS animations • Cybertruck + Robotaxi showcase • 100% local assets
+      </p>
+    </div>
+
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="shamim-whatsapp-clone.vercel.app" target="_blank"
+         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-2 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href=https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-06-WhatsApp-Clone" target="_blank"
+         class="text-gray-400 hover:text-white flex items-center gap-4 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+
+<!--Instagram Clone Project Card -->
+<div class="bg-gray-900 rounded-xl overflow-hidden shadow-2xl hover:scale-105 transition duration-300 group flex flex-col h-full">
+  <!-- Top with Tesla Logo -->
+  <div class="h-48 bg-black relative overflow-hidden">
+    <div class="absolute inset-0 bg-gradient-to-r from-red-600/30 to-transparent"></div>
+    <div class="absolute bottom-4 left-4 text-white font-black text-4xl opacity-85">Instagram</div>
+  </div>
+
+  <div class="p-6 flex flex-col justify-between">
+    <div class="space-y-10">
+      <h3 class="text-2xl font-bold text-purple-500 line-clamp-2 leading-tight">
+        Day 07 – Instagram Clone
+      </h3>
+      <p class="text-gray-300 text-sm leading-relaxed">
+        Pixel-perfect Tesla.com 2025 • Dark/Light mode toggle • Navbar blur on scroll • AOS animations • Cybertruck + Robotaxi showcase • 100% local assets
+      </p>
+    </div>
+
+    <div class="flex gap-20 mt-8 pt-4 border-t border-gray-800">
+      <a href="shamim-instagram-clone.vercel.app" target="_blank"
+         class="text-green-400 font-bold hover:text-green-300 flex items-center gap-2 transition">
+        Live Demo <span class="text-xl">→</span>
+      </a>
+      <a href=https://github.com/shamim-cs-codes/90-days-mern-challenge/tree/main/Day-07-Instagram-Clone" target="_blank"
+         class="text-gray-400 hover:text-white flex items-center gap-4 transition">
+        Source Code <span class="text-xl">→</span>
+      </a>
+    </div>
+  </div>
+</div>
+
+
        <!-- Add more cards as I complete projects -->
       <div class="bg-gray-900/80 rounded-xl p-10 text-center text-gray-500">
         <p class="text-6xl mb-4">🚧</p>
