Updated team section

--- a/Day-08-Asionix-Portfolio/index.html
+++ b/Day-08-Asionix-Portfolio/index.html
@@ -223,14 +223,14 @@
 <!-- IMPORTANT: Replace the 'src' attribute below with the public URL of your image. -->
 <!-- Local file paths (e.g., C:/...) will not work in a browser environment. -->
 <img
-src="assets/chair.jpg"
+src="assets/chairD.jpg"
 alt="Md Ashikur Rahman Bijoy Profile"
 class="w-full h-full object-cover"
 onerror="this.onerror=null; this.src='https://www.google.com/search?q=https://placehold.co/128x128/6366f1/ffffff%3Ftext%3DError';"
 />
 </div>
 <h4 class="text-xl font-bold text-white">Md Ashikur Rahman</h4>
-<p class="text-sm font-semibold text-indigo-400 mb-2">Chairman</p>
+<p class="text-sm font-semibold text-indigo-400 mb-2">Chairmanan and Managing Director</p>
 <p class="text-xs text-gray-400">Drives strategic vision and market expansion, specializing in long-term technical innovation.</p>
 </div>
 
@@ -242,14 +242,14 @@ onerror="this.onerror=null; this.src='https://www.google.com/search?q=https://pl
 <!-- IMPORTANT: Replace the 'src' attribute below with the public URL of your image. -->
 <!-- Local file paths (e.g., C:/...) will not work in a browser environment. -->
 <img
-src="assets/profile.jpg"
+src="assets/ceo.jpg"
 alt="Md Shamim profile"
 class="w-full h-full object-cover"
 onerror="this.onerror=null; this.src='https://www.google.com/search?q=https://placehold.co/128x128/6366f1/ffffff%3Ftext%3DError';"
 />
 </div>
 <h4 class="text-xl font-bold text-white">Md Shamim</h4>
-<p class="text-sm font-semibold text-indigo-400 mb-2">Chief Technology Officer</p>
+<p class="text-sm font-semibold text-indigo-400 mb-2">Chief Executive Officer</p>
 <p class="text-xs text-gray-400">Drives strategic vision and market expansion, specializing in long-term technical innovation.</p>
 </div>
                     <!-- Member 2: CTO -->
