--- a/Day-08-Asionix-Portfolio/index.html
+++ b/Day-08-Asionix-Portfolio/index.html
@@ -230,7 +230,7 @@ onerror="this.onerror=null; this.src='https://www.google.com/search?q=https://pl
 />
 </div>
 <h4 class="text-xl font-bold text-white">Md Ashikur Rahman</h4>
-<p class="text-sm font-semibold text-indigo-400 mb-2">Chairmanan and Managing Director</p>
+<p class="text-sm font-semibold text-indigo-400 mb-2">Chairman and Managing Director</p>
 <p class="text-xs text-gray-400">Drives strategic vision and market expansion, specializing in long-term technical innovation.</p>
 </div>
 
